<resources>
    <string name="app_name">Sigma</string>
    <string name="app_tagline">Where your portfolio starts</string>
    <string name="search_heading">Find specialists</string>
    <string name="search_placeholder">Search for user`s name</string>
    <string name="search_text">Search</string>
    <string name="portfolios_heading">Last Portfolios</string>
    <string name="logo_description">Logo</string>
    <string name="search_magnifying_glass_description">Magnifying glass</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="my_profile_button_text">My profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_hint">Already registered?</string>
    <string name="sign_up_hint">New here?</string>
    <string name="see_all_button">See all</string>
    <string name="list_view_selector">List view</string>
    <string name="recycler_view_selector">Recycler view</string>
    <string name="notification_hint">Enter notification text</string>
    <string name="notification_button">Show notification</string>
    <string name="service_button">Run service</string>
    <string name="user_id">userId</string>
    <string name="user_name">userName</string>
    <string name="user_position">userPosition</string>
    <string name="user_avatar">userAvatar</string>
    <string name="user_info">userInfo</string>
    <string name="text_view_content">textViewContent</string>
    <string name="signed_in">signedIn</string>
    <string name="files_button">Files</string>
    <string name="title_activity_files">FilesActivity</string>
    <string name="app_specific_storage">app-specific storage</string>
    <string name="shared_storage">Shared storage</string>
    <string name="shared_preferences">Shared preferences</string>
    <string name="insert_user">Insert user</string>
    <string name="get_user">Get user</string>
    <string name="preference_file_key">"com.example.Sigma.PREFERENCE_FILE_KEY</string>
    <string name="another_apps_button">Another apps</string>
    <string name="tel_hint">Enter telephone number</string>
    <string name="start_another_app_button">Call</string>
    <string name="get_another_app_button">Get info from another app</string>
</resources>