<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="47dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitStart"
                android:src="@mipmap/logo_image" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_tagline"
                    android:textSize="17sp" />

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/myProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/search_heading"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/searchInput"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="name"
                    android:background="@color/white"
                    android:hint="@string/search_placeholder"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColorHint="@color/gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/search_magnifying_glass_description"
                        android:src="@mipmap/magnifying_glass" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:text="@string/search_text"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/portfolios_heading"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/createNotificationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_button"
                android:layout_marginHorizontal="10dp"
                />

            <Button
                android:id="@+id/seeAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/filesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/files_button"
                android:layout_marginHorizontal="10dp"
                />

            <Button
                android:id="@+id/anotherApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_apps_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>