<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FilesActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/headerContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_header"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/appSpecificStorageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_specific_storage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/sharedStorageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared_storage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/sharedPreferencesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared_preferences"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/insertUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_user"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/getUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_user"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>