<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignUpActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/headerContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_header"
            />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/mailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/gray"
                />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/gray"
                />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                />

        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_hint"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/signInButton"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>