<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.AnotherAppsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/headerContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_header"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/tel_hint"
                android:inputType="number"
                />

            <Button
                android:id="@+id/startAnotherApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/start_another_app_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/getAnotherAppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_another_app_button"/>

            <TextView
                android:id="@+id/resultAnotherAppTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                />


        </LinearLayout>

    </TableLayout>


    
</androidx.constraintlayout.widget.ConstraintLayout>