<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:stretchColumns="*"
        android:shrinkColumns="*">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/mainPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/logo_description"
                        android:scaleType="fitStart"
                        android:src="@mipmap/logo_image" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_tagline"
                        android:textSize="17sp" />

                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/myProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/my_profile_button_text"
                    android:textSize="20sp"
                    android:onClick="onMyProfileClick"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/userPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>